change title and add sentence

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello world</title>
+	<title>就活情報アプリ　Nexera</title>
 	<meta charset="utf-8">
 </head>
 <body>
 	<h1>Nexera</h1>
+	愛知県の就職支援団体や企業の開催するイベントを一元的に見ることができるアプリです
 </body>
 </html>
